# Concurrente-TP2

./: .gitignore  README.md
Cliente-BdD/: CMakeLists.txt
Cliente-BdD/include/: BdD.h  Conector.h  Logger.h  Persona.h
Cliente-BdD/include/ipc/: Cola.h  ExclusiveLockFile.h  LockFIle.h  LockFile.h  MemoriaCompartida.h  Semaforo.h  SharedLockFile.h
Cliente-BdD/include/ipc/signal/: EventHandler.h  SignalHandler.h
Cliente-BdD/include/ipc/signal/impl/: SIGINT_Handler.h
Cliente-BdD/src/: BdD.cpp  BdD.h  Conector.cpp  Logger.cpp  Main.cpp
Cliente-BdD/src/ipc/: ExclusiveLockFile.cpp  LockFIle.cpp  LockFile.cpp  Semaforo.cpp  SharedLockFile.cpp
Gestor-BdD/: CMakeLists.txt
Gestor-BdD/include/: Buscador.h  DespachanteConsultas.h  Insertor.h  Logger.h  Persona.h  utils.h
Gestor-BdD/include/ipc/: Cola.h  ExclusiveLockFile.h  Semaforo.h  SharedLockFile.h
Gestor-BdD/include/ipc/signal/: EventHandler.h  SignalHandler.h
Gestor-BdD/include/ipc/signal/impl/: SIGINT_Handler.h
Gestor-BdD/src/: Buscador.cpp  DespachanteConsultas.cpp  Insertor.cpp  Logger.cpp  Main.cpp  utils.cpp
Gestor-BdD/src/ipc/: ExclusiveLockFile.cpp  SharedLockFile.cpp
Gestor-BdD/src/ipc/signal/: SignalHandler.cpp
